...
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/accent_blue"
        android:text="@string/sign_in"
...
            android:layout_weight="1"
            android:background="@color/divider" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_register"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/surface_l1"
        android:text="REGISTER NEW ACCOUNT"
...
